amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directives.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directives.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more directives with name 'duplicated'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directives.api.graphql#/declares/duplicated
  Property: 
  Range: [(11,0)-(11,31)]
  Location: 
